Fixed small issue with navbar overflow

--- a/css/header.scss
+++ b/css/header.scss
@@ -137,7 +137,7 @@
           a {
             display: block;
             padding: 0;
-            width: 100%;
+            width: calc(100% - $size-md - $size-xs);
             padding-left: $size-md;
             cursor: pointer;
             transition:
